--- a/database/tsconfig.json
+++ b/database/tsconfig.json
@@ -17,7 +17,6 @@
         "./node_modules/rx/ts/rx.binding.d.ts",
         "./typings/**/*.d.ts",
         "./node_modules/*/*.d.ts",
-        "../common/*.d.ts",
         "./gulpfile.ts",
         "./tests/**/*.ts",
         "./ml-retail-demo-database.d.ts"
@@ -47,13 +46,14 @@
         "./node_modules/koa-rx-router/rxRouter.d.ts",
         "./node_modules/ml-admin/ml-admin.d.ts",
         "./node_modules/ml-project/ml-project.d.ts",
+        "./node_modules/ml-retail-demo-common/ml-retail-demo-common.d.ts",
         "./node_modules/ml-typescript-definitions/client.d.ts",
         "./node_modules/ml-typescript-definitions/server.d.ts",
         "./node_modules/ml-uservices/ml-uservices.d.ts",
         "./node_modules/speckle/speckle.d.ts",
+        "./node_modules/tschuss/tschuss.d.ts",
         "./node_modules/typescript-schema/typescript-schema.d.ts",
         "./node_modules/uservices/uservices.d.ts",
-        "../common/ml-retail-demo-common.d.ts",
         "./gulpfile.ts",
         "./tests/services/customerServiceTest.ts",
         "./tests/testServer.ts",
