--- a/app-server/package.json
+++ b/app-server/package.json
@@ -20,19 +20,20 @@
   "license": "MIT",
   "dependencies": {
     "koa": "^0.21.0",
+    "koa-mount": "^1.3.0",
     "koa-static": "^1.4.9",
     "marklogic": "1.0.2",
-    "rx": "^2.5.3",
-    "socket.io": "^1.3.5",
-    "twitter": "^1.2.5",
-    "typescript": "^1.5.0-beta",
     "ml-admin": "^0.2.0",
     "ml-project": "^0.1.0",
     "ml-retail-demo-common": "^0.1.0",
     "ml-retail-demo-database": "^0.1.0",
     "ml-typescript-definitions": "^0.2.0",
     "ml-uservices": "^0.2.0",
+    "rx": "^2.5.3",
+    "socket.io": "^1.3.5",
     "speckle": "^0.1.0",
+    "twitter": "^1.2.5",
+    "typescript": "^1.5.0-beta",
     "typescript-schema": "^0.3.0",
     "uservices": "^0.3.0",
     "uservices-socket.io-client": "^0.2.0",
