--- a/app-server/tsconfig.json
+++ b/app-server/tsconfig.json
@@ -18,7 +18,6 @@
         "./node_modules/*/*.d.ts",
         "./node_modules/rx/ts/rx.binding.d.ts",
         "./gulpfile.ts",
-        "../common/*.d.ts",
         "./ml-retail-demo-app-server.d.ts"
     ],
     "compileOnSave": true,
@@ -39,18 +38,19 @@
         "./node_modules/koa-rx-router/rxRouter.d.ts",
         "./node_modules/ml-admin/ml-admin.d.ts",
         "./node_modules/ml-project/ml-project.d.ts",
+        "./node_modules/ml-retail-demo-common/ml-retail-demo-common.d.ts",
         "./node_modules/ml-retail-demo-database/ml-retail-demo-database.d.ts",
         "./node_modules/ml-typescript-definitions/client.d.ts",
         "./node_modules/ml-typescript-definitions/server.d.ts",
         "./node_modules/ml-uservices/ml-uservices.d.ts",
         "./node_modules/speckle/speckle.d.ts",
+        "./node_modules/tschuss/tschuss.d.ts",
         "./node_modules/typescript-schema/typescript-schema.d.ts",
         "./node_modules/uservices-socket.io-client/uservices-socket.io-client.d.ts",
         "./node_modules/uservices-socket.io-server/uservices-socket.io-server.d.ts",
         "./node_modules/uservices/uservices.d.ts",
         "./node_modules/rx/ts/rx.binding.d.ts",
         "./gulpfile.ts",
-        "../common/ml-retail-demo-common.d.ts",
         "./ml-retail-demo-app-server.d.ts"
     ]
 }
