--- a/database/package.json
+++ b/database/package.json
@@ -34,6 +34,7 @@
     "gulp": "^3.9.0",
     "gulp-mocha": "^2.1.1",
     "koa": "^0.21.0",
+    "lodash.assign": "^3.2.0",
     "mocha": "^2.2.5",
     "should": "^6.0.3",
     "should-promised": "^0.2.1"
