--- a/app-server/package.json
+++ b/app-server/package.json
@@ -22,6 +22,7 @@
     "koa": "^0.21.0",
     "koa-mount": "^1.3.0",
     "koa-static": "^1.4.9",
+    "tschuss": "^0.1.0",
     "marklogic": "1.0.2",
     "ml-admin": "^0.2.0",
     "ml-project": "^0.1.0",
