--- a/customer-app/package.json
+++ b/customer-app/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^0.23.7",
     "rx": "^2.5.3",
     "socket.io-client": "^1.3.5",
+    "tschuss": "^0.1.0",
     "typescript": "^1.5.0-beta",
     "ml-admin": "^0.2.0",
     "ml-project": "^0.1.0",
