--- a/database/package.json
+++ b/database/package.json
@@ -22,6 +22,7 @@
     "rx": "^2.5.3",
     "typescript": "^1.5.0-beta",
     "ml-admin": "^0.2.0",
+    "tschuss": "^0.1.0",
     "ml-project": "^0.1.0",
     "ml-retail-demo-common": "^0.1.0",
     "ml-typescript-definitions": "^0.2.0",
