--- a/app-server/package.json
+++ b/app-server/package.json
@@ -21,8 +21,8 @@
   "dependencies": {
     "koa": "^0.21.0",
     "koa-mount": "^1.3.0",
+    "koa-rx-router": "^0.1.1",
     "koa-static": "^1.4.9",
-    "tschuss": "^0.1.0",
     "marklogic": "1.0.2",
     "ml-admin": "^0.2.0",
     "ml-project": "^0.1.0",
@@ -33,6 +33,7 @@
     "rx": "^2.5.3",
     "socket.io": "^1.3.5",
     "speckle": "^0.1.0",
+    "tschuss": "^0.1.0",
     "twitter": "^1.2.5",
     "typescript": "^1.5.0-beta",
     "typescript-schema": "^0.3.0",
