--- a/customer-app/package.json
+++ b/customer-app/package.json
@@ -37,6 +37,7 @@
     "uservices-socket.io-client": "^0.2.0"
   },
   "devDependencies": {
-    "gulp": "^3.9.0"
+    "gulp": "^3.9.0",
+    "gulp-uglify": "^1.2.0"
   }
 }
